# multipass-sdk

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/multipass/: __init__.py  _backend.py  client.py  e2e.py  exceptions.py  models.py  testing.py  utils.py  vm.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_backend.py  test_client.py  test_exceptions.py  test_models.py  test_utils.py  test_vm.py
